--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,42 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="PowderBlue">#B0DEDB</color>
+    <color name="Alabaster">#F1E9E3</color>
+    <color name="CosmicLatte">#FEFCE8</color>
+    <color name="BrightGray">#EEEEEE</color>
+    <color name="DutchWhite">#EFDCC2</color>
+    <color name="Cinereous">#9D8B7D</color>
+    <color name="Grullo">#A6918A</color>
+    <color name="USAFABlue">#004C97</color>
+    <color name="PoliceBlue">#215A69</color>
+    <color name="DarkSlateGray">#375152</color>
+    <color name="BrightTurquoise">#00ECEA</color>
+    <color name="TiffanyBlue">#00ABC0</color>
+    <color name="MoonstoneBlue">#69ADBA</color>
+    <color name="PastelBlue">#ABC8C6</color>
+    <color name="PictorialCarmine">#C51248</color>
+    <color name="AlabamaCrimson">#AD0024</color>
+    <color name="Cardinal">#C42137</color>
+    <color name="JapaneseCarmine">#A22634</color>
+    <color name="BurnishedBrown">#A98177</color>
+    <color name="Champagne">#F8E4D4</color>
+    <color name="DeepJungleGreen">#00534E</color>
+    <color name="WintergreenDream">#4E8383</color>
+    <color name="GreenSheen">#78A19B</color>
+    <color name="CambridgeBlue">#9FBCA6</color>
+    <color name="PaleGreen">#99FB99</color>
+    <color name="VeryLightMalachiteGreen">#66E988</color>
+    <color name="CrayolasSkyBlue">#62DCF8</color>
+    <color name="InfraRed">#FE4C6B</color>
+    <color name="DarkVanilla">#D9BBA5</color>
+    <color name="Shandy">#FFE374</color>
+    <color name="RipeMango">#FFBE29</color>
+    <color name="YankeesBlue">#131A49</color>
+    <color name="MaastrichtBlue">#011C3A</color>
+    <color name="GraniteGray">#666666</color>
+    <color name="PhilippineGray">#8C8C8C</color>
+    <color name="SpanishGray">#989898</color>
+    <color name="X11DarkGray">#A9A9A9</color>
+    <color name="Argent">#C0C0C0</color>
 </resources>
