--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,271 @@
             android:textColor="@color/DarkSlateGray"
             android:gravity="left|bottom"
             android:layout_gravity="fill_horizontal" />
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/TiffanyBlue"
+            android:columnCount="4"
+            android:padding="10dp">
+        <Button
+            android:id="@+id/b7"
+            android:onClick="press7"
+            android:text="7"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b8"
+            android:onClick="press7"
+            android:text="8"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b9"
+            android:onClick="press9"
+            android:text="9"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/div"
+            android:onClick="pressDiv"
+            android:text="/"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Champagne"
+            android:backgroundTint="@color/PoliceBlue"
+            />
 
+        <Button
+            android:id="@+id/b4"
+            android:onClick="press4"
+            android:text="4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b5"
+            android:onClick="press5"
+            android:text="5"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b6"
+            android:onClick="press6"
+            android:text="6"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/mul"
+            android:onClick="pressMul"
+            android:text="*"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Champagne"
+            android:backgroundTint="@color/PoliceBlue"
+            />
 
+        <Button
+            android:id="@+id/b3"
+            android:onClick="press3"
+            android:text="3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b2"
+            android:onClick="press2"
+            android:text="2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b1"
+            android:onClick="press1"
+            android:text="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/min"
+            android:onClick="pressMin"
+            android:text="-"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Champagne"
+            android:backgroundTint="@color/PoliceBlue"
+            />
 
+        <Button
+            android:id="@+id/b0"
+            android:onClick="press0"
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/b00"
+            android:onClick="press00"
+            android:text="00"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/DarkSlateGray"
+            android:backgroundTint="@color/BrightTurquoise"
+            />
+        <Button
+            android:id="@+id/ac"
+            android:onClick="pressAc"
+            android:text="AC"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Shandy"
+            android:backgroundTint="@color/YankeesBlue"
+            />
+        <Button
+            android:id="@+id/plass"
+            android:onClick="pressPlass"
+            android:text="+"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Champagne"
+            android:backgroundTint="@color/PoliceBlue"
+            />
+
+        <Button
+            android:id="@+id/equal"
+            android:onClick="pressEqual"
+            android:text="="
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/Champagne"
+            android:backgroundTint="@color/PoliceBlue"
+            />
+        </GridLayout>
+    </LinearLayout>
 </LinearLayout>
